--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "export": "next export"
   },
   "dependencies": {
-    "framer-motion": "^11.3.8",
-    "next": "^14.2.30",
+    "framer-motion": "^12.23.6",
+    "next": "14.2.30",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.4.0",
     "sharp": "^0.34.3",
-    "tailwind-merge": "^2.4.0"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^24.0.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "15.4.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
