--- a/package.json
+++ b/package.json
@@ -3,29 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export"
+    "lint": "next lint"
   },
   "dependencies": {
     "framer-motion": "^12.23.6",
-    "next": "14.2.30",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "15.4.2",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-icons": "^5.4.0",
     "sharp": "^0.34.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^24.0.15",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "eslint": "^9.31.0",
     "eslint-config-next": "15.4.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6"
   }
 }
